fix text-alignement

--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@
 	h3 {
 		margin-top: 1rem;
 		color: #6A453B;
+		text-align: center;
 	}
 
 	p
